...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_marginHorizontal="10dp">

    <EditText
        android:id="@+id/etActiveTrackingName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:ems="10"
        android:inputType="textShortMessage|text"
        tools:layout_editor_absoluteX="105dp"
...
